--- a/Zetta/Zetta.Example/Zetta.Example.csproj
+++ b/Zetta/Zetta.Example/Zetta.Example.csproj
@@ -18,6 +18,16 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="Execute" command="/Users/kevin/nvm/v4.0.0/bin/node server.js" workingdir="/Users/kevin/projects/zetta-dotnet" externalConsole="True" />
+      </CustomCommands>
+    </CustomCommands>
+    <EnvironmentVariables>
+      <EnvironmentVariables>
+        <Variable name="EDGE_CS_DEBUG" value="" />
+      </EnvironmentVariables>
+    </EnvironmentVariables>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -34,8 +44,10 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="DisplayScout.cs" />
-    <Compile Include="Display.cs" />
+    <Compile Include="LED.cs" />
+    <Compile Include="LEDScout.cs" />
+    <Compile Include="HeartbeatScout.cs" />
+    <Compile Include="Heartbeat.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
