--- a/Zetta/Zetta.csproj
+++ b/Zetta/Zetta.csproj
@@ -36,6 +36,7 @@
     <Compile Include="Server.cs" />
     <Compile Include="Scout.cs" />
     <Compile Include="Device.cs" />
+    <Compile Include="ScoutLoader.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
