--- a/Zetta/Zetta.Example/Zetta.Example.csproj
+++ b/Zetta/Zetta.Example/Zetta.Example.csproj
@@ -40,6 +40,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -55,5 +58,8 @@
       <Project>{2E56806F-4EAB-4023-9629-CC957D22B7F8}</Project>
       <Name>Zetta</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
