Renaming Zetta project to Zetta.Core

--- a/Zetta/Zetta.Example/Zetta.Example.csproj
+++ b/Zetta/Zetta.Example/Zetta.Example.csproj
@@ -54,9 +54,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <ProjectReference Include="..\Zetta.csproj">
+    <ProjectReference Include="..\Zetta.Core.csproj">
       <Project>{2E56806F-4EAB-4023-9629-CC957D22B7F8}</Project>
-      <Name>Zetta</Name>
+      <Name>Zetta.Core</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
