--- a/src/Zetta.Core/Zetta.Core.csproj
+++ b/src/Zetta.Core/Zetta.Core.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{2E56806F-4EAB-4023-9629-CC957D22B7F8}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Zetta</RootNamespace>
+    <RootNamespace>Zetta.Core</RootNamespace>
     <AssemblyName>Zetta</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
@@ -48,6 +48,9 @@
     <Compile Include="MonitorAttribute.cs" />
     <Compile Include="SetterInterceptor.cs" />
     <Compile Include="DeviceProxy.cs" />
+    <Compile Include="FieldAttribute.cs" />
+    <Compile Include="FieldType.cs" />
+    <Compile Include="Field.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
