--- a/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
+++ b/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
@@ -3,11 +3,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{E102C8C1-D62F-4370-AE73-DE4955018D1C}</ProjectGuid>
+    <ProjectGuid>{E351CD74-6A5E-468A-9C5D-21343D4B0AB0}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Zetta.Example.Tests</RootNamespace>
-    <AssemblyName>Zetta.Example.Tests</AssemblyName>
+    <RootNamespace>Zetta.Core.Tests</RootNamespace>
+    <AssemblyName>Zetta.Core.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -35,6 +35,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.7.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
@@ -54,7 +55,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="Helpers\LED.cs" />
+    <Compile Include="Helpers\LEDScout.cs" />
+    <Compile Include="Helpers\MockInput.cs" />
+    <Compile Include="Helpers\MockServer.cs" />
+    <Compile Include="ScoutTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -62,11 +67,8 @@
       <Project>{2e56806f-4eab-4023-9629-cc957d22b7f8}</Project>
       <Name>Zetta.Core</Name>
     </ProjectReference>
-    <ProjectReference Include="..\Zetta.Example\Zetta.Example.csproj">
-      <Project>{fab15334-09af-45d8-b8d4-a95b85a52d51}</Project>
-      <Name>Zetta.Example</Name>
-    </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
