--- a/src/Zetta.Example/Zetta.Example.csproj
+++ b/src/Zetta.Example/Zetta.Example.csproj
@@ -61,4 +61,7 @@
       <Name>Zetta.Core</Name>
     </ProjectReference>
   </ItemGroup>
+  <PropertyGroup>
+    <PostBuildEvent>xcopy "$(TargetDir)*" "C:\Program Files\nodejs\" /y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
