--- a/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
+++ b/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
@@ -43,6 +43,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DeviceTests.cs" />
     <Compile Include="Helpers\LED.cs" />
     <Compile Include="Helpers\LEDScout.cs" />
     <Compile Include="Helpers\MockInput.cs" />
