--- a/src/Zetta.Core/Zetta.Core.csproj
+++ b/src/Zetta.Core/Zetta.Core.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Interop\Payload.cs" />
     <Compile Include="Interop\PayloadFactory.cs" />
     <Compile Include="Interop\Serializer.cs" />
+    <Compile Include="Interop\ZettaInteropContractResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Scout.cs" />
