--- a/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
+++ b/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
@@ -50,6 +50,7 @@
     <Compile Include="Helpers\MockInput.cs" />
     <Compile Include="Helpers\MockServer.cs" />
     <Compile Include="Interop\SerializerTests.cs" />
+    <Compile Include="Interop\ZettaInteropContractResolverTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ScoutLoaderTests.cs" />
     <Compile Include="ScoutTests.cs" />
