Adding support for server.observe and device.createReadStream.

--- a/src/Zetta.Core/Zetta.Core.csproj
+++ b/src/Zetta.Core/Zetta.Core.csproj
@@ -43,15 +43,18 @@
     <Compile Include="Interop\Commands\SaveCommand.cs" />
     <Compile Include="Interop\Commands\SetPropertyCommand.cs" />
     <Compile Include="Interop\ICommand.cs" />
-    <Compile Include="Interop\Payload.cs" />
-    <Compile Include="Interop\PayloadFactory.cs" />
+    <Compile Include="Interop\DevicePayload.cs" />
+    <Compile Include="Interop\DevicePayloadFactory.cs" />
+    <Compile Include="Interop\QueryPayload.cs" />
     <Compile Include="Interop\Serializer.cs" />
     <Compile Include="Interop\ZettaInteropContractResolver.cs" />
+    <Compile Include="ObjectStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Scout.cs" />
     <Compile Include="Device.cs" />
     <Compile Include="ScoutLoader.cs" />
+    <Compile Include="StreamMessage.cs" />
     <Compile Include="TransitionValue.cs" />
     <Compile Include="MonitorAttribute.cs" />
     <Compile Include="SetterInterceptor.cs" />
