--- a/src/Zetta.Example/Zetta.Example.csproj
+++ b/src/Zetta.Example/Zetta.Example.csproj
@@ -42,6 +42,7 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CompositeScout.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="LED.cs" />
