--- a/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
+++ b/src/Zetta.Core.Tests/Zetta.Core.Tests.csproj
@@ -50,7 +50,7 @@
     <Compile Include="Helpers\MockInput.cs" />
     <Compile Include="Helpers\MockServer.cs" />
     <Compile Include="Interop\CommandBusTests.cs" />
-    <Compile Include="Interop\PayloadFactoryTests.cs" />
+    <Compile Include="Interop\DevicePayloadFactoryTests.cs" />
     <Compile Include="Interop\SerializerTests.cs" />
     <Compile Include="Interop\ZettaInteropContractResolverTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
