Getting observe to work, adding a MemoryRegistry for keeping one instance per device in .NET.

--- a/src/Zetta.Core/Zetta.Core.csproj
+++ b/src/Zetta.Core/Zetta.Core.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Interop\QueryPayload.cs" />
     <Compile Include="Interop\Serializer.cs" />
     <Compile Include="Interop\ZettaInteropContractResolver.cs" />
+    <Compile Include="MemoryRegistry.cs" />
     <Compile Include="ObjectStream.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Server.cs" />
