--- a/src/Zetta.Core.Tests/packages.config
+++ b/src/Zetta.Core.Tests/packages.config
@@ -3,4 +3,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="NUnit" version="3.0.0-beta-5" targetFramework="net452" />
+  <package id="NUnit.Console" version="3.0.0-rc" targetFramework="net451" />
+  <package id="OpenCover" version="4.6.166" targetFramework="net45" />
+  <package id="ReportGenerator" version="2.3.2.0" targetFramework="net45" />
 </packages>
