--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "dot-net-test": "node ./tools/dot-net-test.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
