--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "dot-net-build": "node ./tools/dot-net-build.js",
     "dot-net-test": "node ./tools/dot-net-test.js",
+    "dot-net-test-report": "node ./tools/dot-net-test-report.js",
     "dot-net-coverage": "node ./tools/dot-net-coverage.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
