--- a/src/Zetta.Core.Tests/packages.config
+++ b/src/Zetta.Core.Tests/packages.config
@@ -6,4 +6,5 @@
   <package id="NUnit.Console" version="3.0.0-rc" targetFramework="net451" />
   <package id="OpenCover" version="4.6.166" targetFramework="net45" />
   <package id="ReportGenerator" version="2.3.2.0" targetFramework="net45" />
+  <package id="ReportUnit" version="1.2.1" targetFramework="net45" />
 </packages>
