--- a/src/Zetta.Core/packages.config
+++ b/src/Zetta.Core/packages.config
@@ -2,4 +2,7 @@
 <packages>
   <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="Rx-Core" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net45" />
+  <package id="Rx-Linq" version="2.2.5" targetFramework="net45" />
 </packages>
